[gd_scene load_steps=6 format=3 uid="uid://cc6rckhiyshl8"]

[ext_resource type="Script" path="res://src/ui/options_menu.gd" id="1_0ahl1"]
[ext_resource type="Texture2D" uid="uid://ljvsusbkk5hj" path="res://assets/ui/small_star.png" id="2_2t0d2"]
[ext_resource type="FontFile" uid="uid://cx6s3op6yjnhp" path="res://assets/ui/fonts/Spring Snowstorm.ttf" id="3_o3fci"]
[ext_resource type="PackedScene" uid="uid://b3rdnci654m2g" path="res://src/ui/menu_button.tscn" id="4_mhrjr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syjjf"]
bg_color = Color(0.619608, 0.431373, 0.756863, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 81.0
offset_top = 289.0
offset_right = 266.0
offset_bottom = 504.0
script = ExtResource("1_0ahl1")

[node name="Music" type="HSlider" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 31.0
offset_right = 164.0
offset_bottom = 85.0
theme_override_icons/grabber = ExtResource("2_2t0d2")
theme_override_icons/grabber_highlight = ExtResource("2_2t0d2")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_syjjf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_syjjf")
min_value = -20.0
max_value = 6.0

[node name="Title" type="Label" parent="Music"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -52.0
offset_right = 48.5
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.866667, 0.65098, 1)
theme_override_fonts/font = ExtResource("3_o3fci")
theme_override_font_sizes/font_size = 30
text = "Music"
metadata/_edit_lock_ = true

[node name="Sound" type="HSlider" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 104.0
offset_right = 166.0
offset_bottom = 158.0
theme_override_icons/grabber = ExtResource("2_2t0d2")
theme_override_icons/grabber_highlight = ExtResource("2_2t0d2")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_syjjf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_syjjf")
min_value = -20.0
max_value = 6.0

[node name="Title" type="Label" parent="Sound"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -52.0
offset_right = 48.5
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.866667, 0.65098, 1)
theme_override_fonts/font = ExtResource("3_o3fci")
theme_override_font_sizes/font_size = 30
text = "Sound"
metadata/_edit_lock_ = true

[node name="Back" parent="." instance=ExtResource("4_mhrjr")]
layout_mode = 0
offset_left = 29.0
offset_top = 172.0
offset_right = 225.0
offset_bottom = 231.0
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Quit")
text = "Back"

[connection signal="value_changed" from="Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Sound" to="." method="_on_sound_value_changed"]
[connection signal="button_up" from="Back" to="." method="_on_back_button_up"]
